--- a/index.html
+++ b/index.html
@@ -1,38 +1,7 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
-<head>
-    <meta charset="UTF-8">
-    <title>Lin's Homepage</title>
-    <meta name="description" content="Lin's Homepage">
-    <link rel="icon" href="favicon.ico">
-    <!-- build:css css/style.css -->
-    <link rel="stylesheet" href="../node_modules/normalize.css/normalize.css" />
-    <link rel="stylesheet" href="styles/main.css" />
-    <link rel="stylesheet" href="styles/iconfont.css" />
-    <link rel="stylesheet" href="../node_modules/hint.css/hint.min.css" />
-    <!-- endbuild -->
-</head>
+<html>
 <body>
-<header>
-    <div><img src="1.png" height="100" width="100" style="border-radius:30px"/></div>
-    <h1>欢迎!</h1>
-    <h2><span id="intro">我是</span><span class="cursor">|</span></h2>
-
-    <nav>
-        <a class="hint--bottom" data-hint="Blog" href="http://blog.daraw.cn"><i class="icon icon-hexo"></i></a>
-        <a class="hint--bottom" data-hint="Zhihu" href="https://www.zhihu.com/people/wu-hao-12-14-83"><i class="icon icon-zhihu"></i></a>
-        <a class="hint--bottom" data-hint="Github" href="https://github.com/CodeDaraW"><i class="icon icon-github"></i></a>
-        <a class="hint--bottom" data-hint="CV" href="static/cv.pdf"><i class="icon icon-cv"></i></a>
-    </nav>
-</header>
-
-<!-- build:js js/app.js -->
-<script src="scripts/pixi.js" type="text/javascript"></script>
-<script src="scripts/quicksketch.min.js" type="text/javascript"></script>
-<script src="scripts/introBG.js" type="text/javascript"></script>
-<script src="scripts/typing.min.js" type="text/javascript"></script>
-<script src="scripts/init.js" type="text/javascript"></script>
-<!-- endbuild -->
-
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
