--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <meta name="description" content="Lin's Homepage">
     <link rel="icon" href="favicon.ico">
     <!-- build:css css/style.css -->
-    <link rel="stylesheet" href="../node_modules/normalize.css/normalize.css" />
     <link rel="stylesheet" href="styles/main.css" />
-    <link rel="stylesheet" href="styles/iconfont.css" />
-    <link rel="stylesheet" href="../node_modules/hint.css/hint.min.css" />
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hint.css/2.2.0/hint.base.min.css">
     <!-- endbuild -->
 </head>
 <body>
@@ -19,10 +18,11 @@
     <h2><span id="intro">我是</span><span class="cursor">|</span></h2>
 
     <nav>
-        <a class="hint--bottom" data-hint="Blog" href="http://blog.daraw.cn"><i class="icon icon-hexo"></i></a>
-        <a class="hint--bottom" data-hint="Zhihu" href="https://www.zhihu.com/people/wu-hao-12-14-83"><i class="icon icon-zhihu"></i></a>
-        <a class="hint--bottom" data-hint="Github" href="https://github.com/CodeDaraW"><i class="icon icon-github"></i></a>
-        <a class="hint--bottom" data-hint="CV" href="static/cv.pdf"><i class="icon icon-cv"></i></a>
+        <span><a class="hint--bottom" data-hint="blog" href="http://mutou-it.com"><i class="fa fa-file-text-o fa-3x" style="color: gainsboro;"></i></a></span>
+        <span><a class="hint--bottom" data-hint="github" href="https://github.com/youzhixiaomutou"><i class="fa fa-github fa-3x" style="color: gainsboro;"></i></a></span>
+        <span><a class="hint--bottom" data-hint="steam" href="http://steamcommunity.com/profiles/76561198096598009"><i class="fa fa-steam-square fa-3x" style="color: gainsboro;"></i></a></span>
+        <span><a class="hint--bottom" data-hint="weibo" href="http://weibo.com/1517228582"><i class="fa fa-weibo fa-3x" style="color: gainsboro;"></i></a></span>
+        <span><a class="hint--bottom" data-hint="e-mail" href="mailto:451294496@qq.com"><i class="fa fa-envelope fa-3x" style="color: gainsboro;"></i></a></span>
     </nav>
 </header>
 
