--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <h2><span id="intro">我是</span><span class="cursor">|</span></h2>
 
     <nav>
-        <span><a class="hint--bottom" data-hint="blog" href="http://mutou-it.com"><i class="fa fa-file-text-o fa-3x" style="color: gainsboro;"></i></a></span>
+        <span><a class="hint--bottom" data-hint="blog" href="http://lxwme.com"><i class="fa fa-file-text-o fa-3x" style="color: gainsboro;"></i></a></span>
         <span><a class="hint--bottom" data-hint="github" href="https://github.com/youzhixiaomutou"><i class="fa fa-github fa-3x" style="color: gainsboro;"></i></a></span>
         <span><a class="hint--bottom" data-hint="steam" href="http://steamcommunity.com/profiles/76561198096598009"><i class="fa fa-steam-square fa-3x" style="color: gainsboro;"></i></a></span>
         <span><a class="hint--bottom" data-hint="weibo" href="http://weibo.com/1517228582"><i class="fa fa-weibo fa-3x" style="color: gainsboro;"></i></a></span>
-        <span><a class="hint--bottom" data-hint="e-mail" href="mailto:451294496@qq.com"><i class="fa fa-envelope fa-3x" style="color: gainsboro;"></i></a></span>
+        <span><a class="hint--bottom" data-hint="e-mail" href="mailto:linxiaowei.me@gmail.com"><i class="fa fa-envelope fa-3x" style="color: gainsboro;"></i></a></span>
     </nav>
 </header>
 
